--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+
+/* * {
+    outline: 2px solid red;
+    padding: 20px;
+    margin: 20px;
+    border: 5px blue;
+  } */
+
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
